# wasteladns

./: .gitignore  README.md
c++/: CMakeLists.txt  README.md
c++/assets/meshes/: boar.fbx  pts_1k.txt  pts_1k_projected.txt  tank.fbx
c++/src/: main.cpp  workspace_main.cpp
c++/src/Test2D/: main.cpp
c++/src/Test3D/: game.h  game_renderer.h  gameplay.h  main.cpp
c++/src/Test3D/helpers/: allocator.h  angle.h  bvh.h  easing.h  input.h  input_hid_gamepad.h  io.h  platform.h  renderer.h  renderer_debug.h  renderer_types.h  types.h  vec.h  vec_ops.h
c++/src/Test3D/helpers/dx11/: core.h  input.h  input_types.h  main.h  renderer.h  renderer_types.h  shaders.h
c++/src/Test3D/helpers/gl/: renderer.h  renderer_types.h  shaders.h
c++/src/Test3D/helpers/glfw/: core.h  input_types.h  main.h  renderer.h  shaders.h
c++/src/Test3D/helpers/macos/: input.h  input_types.h  main.mm  renderer.h  renderer_types.h  shaders.h
c++/src/Test3D/helpers/platform_glfw/: core.h  input.h  input_types.h  main.h
c++/src/Test3D/helpers/platform_mac/: core.h  input.h  input_types.h  main.mm
c++/src/Test3D/lib/glad/: glad.c  glad.h
c++/src/Test3D/lib/tinystl/: allocator.h  buffer.h  new.h  stddef.h  traits.h
c++/src/Test3D/shaders/: dx2gl.py
c++/src/TestCamera/: main.cpp
c++/src/TestCamera/helpers/: camera.h  debugdraw.h  easing.h  input.h  input_helpers.h  math.h  template_defines.h  transform.h  vec.h
c++/src/TestCamera/lib/stb/: stb_easy_font.h
c++/src/TestGamepad/: main.cpp
c++/src/TestGamepad/helpers/: angle.h  color.h  controller_render.h  controller_renderdata.h  input.h  math.h  vec.h
c++/src/TestIllumination/: game.h  main.cpp
c++/src/TestIllumination/helpers/: angle.h  input_mappings.h  renderer.h  renderer_debug.h  renderer_types.h  types.h  vec.h
c++/src/TestIllumination/helpers/dx11/: core.h  input.h  io.h  main.h  renderer.h  renderer_types.h  shaders.h
c++/src/TestIllumination/helpers/glfw/: input.h  main.h  renderer.h  renderer_types.h  shaders.h
c++/src/TestIllumination/lib/glad/: glad.h
c++/src/TestMesh/: game.h  main.cpp
c++/src/TestMesh/helpers/: bvh.h  hash.h  renderer_debug.h  transform.h  vec_ops.h
c++/src/TestMesh/helpers/glfw/: input.h  main.h  shaders.h
c++/src/TestPlatformAPI/: game.h  main.cpp
c++/src/TestPlatformAPI/helpers/: angle.h  camera.h  color.h  input.h  platform.h  renderer.h  renderer_debug.h  renderer_types.h  transform.h  vec.h  vec_ops.h
c++/src/TestPlatformAPI/helpers/directx9/: core.h  input.h  main.h
c++/src/TestPlatformAPI/helpers/dx11/: core.h  input.h  io.h  main.h  shaders.h
c++/src/TestPlatformAPI/helpers/glfw/: core.h  input.h  io.h  main.h  renderer.h  renderer_debug.h  renderer_types.h  shaders.h
c++/src/TestPlatformAPI/lib/glad/: glad.c
c++/src/TestPlatformAPI/lib/stb/: stb_easy_font.h
c++/src/TestSmoothMotion/: main.cpp
c++/src/TestSmoothMotion/helpers/: Array.h  Color.h  GrcPrimitives.inl  Math.h  TypeDefinitions.h  Types.h  Vec.h  Vec2.h  Vec3.h  debugdraw.h
c++/src/TestSpatial/: game.h  main.cpp
c++/src/TestSpatial/helpers/: renderer_debug.h  renderer_types.h  vec.h  vec_ops.h
c++/src/TestSpatial/helpers/dx11/: io.h
c++/src/TestSpatial/helpers/glfw/: core.h
c++/src/TestText/helpers/: GrcPrimitives.cpp  GrcPrimitives.inl  Vec4.h
c++/src/TestTrajectory/: main.cpp
c++/src/TestTrajectory/helpers/: Angle.h  Color.h  Math.h  Vec.h  debugdraw.h
c++_2018-2024/: README.md
c++_2024-/: CMakeLists.txt  README.md  build.bat  build.sh  setupvcvars.bat  wasteladns.natvis
c++_2024-/assets/meshes/: bird.fbx  boar.fbx
c++_2024-/src/: main.cpp
c++_2024-/src/TestMirrors/: .vimrc  README.md  animation.h  drawlist.h  game.h  main.cpp  scene.h  shaders.h
c++_2024-/src/TestMirrors/helpers/: allocator.h  angle.h  bvh.h  input_hid_gamepad.h  io.h  math.h  platform.h  renderer.h  renderer_debug.h  transform.h  types.h  vec.h  vec_ops.h
c++_2024-/src/TestMirrors/helpers/platform_mac/: core.h  main.mm
c++_2024-/src/TestMirrors/helpers/platform_win/: core.h  input_types.h  main.h
c++_2024-/src/TestMirrors/helpers/renderer_dx11/: renderer.h  renderer_types.h
c++_2024-/src/TestMirrors/helpers/renderer_gl33/: loader_gl.h  renderer.h  renderer_types.h
c++_2024-/src/TestPhysics/: README.md  game.h  gameplay.h  main.cpp  physics.h  renderer.h  scene.h  shaders.h
c++_2024-/src/TestPhysics/helpers/: bvh.h  color.h  core_mac.h  easing.h  immediate_mode.h  main_mac.mm  main_win.h  math.h  platform.h  transform.h  vec.h  vec_ops.h
c++_2024-/src/TestRewind/: .vimrc  animation.h  drawlist.h  game.h  game_renderer.h  gameplay.h  main.cpp  physics.h  scene.h  shaders.h
c++_2024-/src/TestRewind/helpers/: allocator.h  angle.h  animation.h  bvh.h  camera.h  color.h  easing.h  hash.h  input.h  input_hid_gamepad.h  io.h  math.h  platform.h  renderer.h  renderer_debug.h  renderer_types.h  transform.h  types.h  vec.h  vec_ops.h
c++_2024-/src/TestSDF/: .vimrc  README.md  game.h  gameplay.h  libs.h  main.cpp  renderer.h  scene.h  shader_build.bat  shader_build.sh  shaders.h
c++_2024-/src/TestSDF/helpers/: allocator.h  angle.h  bvh.h  core.h  core_win.h  immediate_mode.h  io.h  main.h  main_mac.mm  platform.h
c++_2024-/src/TestSDF/shader_src_dx11/: ps_fullscreen_blit_sdf.h  ps_fullscreen_blit_sdf.ps  ps_textured3d_base.h  ps_textured3d_base.ps  ps_textured3dalphaclip_base.h  ps_textured3dalphaclip_base.ps  shader_output_dx11.h  vs_3d_base.h  vs_3d_base.vs  vs_3d_instanced_base.h  vs_3d_instanced_base.vs  vs_color2d_base.h  vs_color2d_base.vs  vs_color3d_base.h  vs_color3d_base.vs  vs_color3d_skinned_base.h  vs_color3d_skinned_base.vs  vs_textured3d_base.h  vs_textured3d_base.vs  vs_textured3d_skinned_base.h  vs_textured3d_skinned_base.vs
c++_2024-/src/TestSDF/shader_src_gl33/: ps_fullscreen_blit_sdf.frag  ps_textured3d_base.frag  ps_textured3dalphaclip_base.frag  shader_output_gl33.h  vs_3d_base.vert  vs_3d_instanced_base.vert  vs_color2d_base.vert  vs_color3d_base.vert  vs_color3d_skinned_base.vert  vs_textured3d_base.vert  vs_textured3d_skinned_base.vert
c++_2024-/src/TestShadows/: README.md
(+145 files in other folders)
